Fix ag date